# Ondine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  TODO.md  setup_unix.sh
res/: dummy.txt  other_dummy.txt
res/comp/: screenshot_parameters.txt
res/draw_cache/sky/: irradiance.cache  transmittance.cache
res/glsl/: BRDFLut.frag  BaseModel.frag  BaseModel.vert  BloomAdditive.frag  BloomBlur.frag  BloomPrefilter.frag  CameraDef.glsl  Clipping.glsl  Compute.comp  Glowing.frag  Lighting.frag  Lighting.glsl  Lighting.vert  LightingDef.glsl  LightingRefl.frag  Line.frag  Line.vert  NoLighting.frag  Particle.comp  Pixelater.frag  Planet.frag  Planet.vert  PlanetDef.glsl  Point.frag  Point.vert  Sky.glsl  SkyDef.glsl  SkyDemo.frag  SkyDemo.vert  SkyDirectIrradiance.comp  SkyDirectIrradiance.frag  SkyIndirectIrradiance.comp  SkyIndirectIrradiance.frag  SkyMultipleScattering.comp  SkyMultipleScattering.frag  SkyPrecompute.geom  SkyPrecompute.vert  SkyScatteringDensity.comp  SkyScatteringDensity.frag  SkySingleScattering.comp  (+30 more)
res/model/: Cube.fbx  Monkey.fbx  Plane.fbx  Taurus.fbx  UVSphere.fbx
res/model/ondine/: Ondine.blend  Ondine.blend1  Ondine.fbx
res/spv/: BRDFLut.frag.spv  BaseModel.frag.spv  BaseModel.vert.spv  BloomAdditive.frag.spv  BloomBlur.frag.spv  BloomPrefilter.frag.spv  Compute.comp.spv  Glowing.frag.spv  Lighting.frag.spv  Lighting.vert.spv  LightingRefl.frag.spv  Line.frag.spv  Line.vert.spv  NoLighting.frag.spv  Particle.comp.spv  Pixelater.frag.spv  Planet.frag.spv  Planet.vert.spv  Point.frag.spv  Point.vert.spv  SkyDemo.frag.spv  SkyDemo.vert.spv  SkyDirectIrradiance.comp.spv  SkyDirectIrradiance.frag.spv  SkyIndirectIrradiance.comp.spv  SkyIndirectIrradiance.frag.spv  SkyMultipleScattering.comp.spv  SkyMultipleScattering.frag.spv  SkyPrecompute.geom.spv  SkyPrecompute.vert.spv  SkyScatteringDensity.comp.spv  SkyScatteringDensity.frag.spv  SkySingleScattering.comp.spv  SkySingleScattering.frag.spv  SkyTransmittance.comp.spv  SkyTransmittance.frag.spv  Stars.frag.spv  Stars.vert.spv  Terrain.frag.spv  Terrain.vert.spv  (+17 more)
src/: #yona_vulkan_texture.hpp#  Application.cpp  Application.hpp  ArenaAllocator.cpp  ArenaAllocator.hpp  Buffer.hpp  Camera.cpp  Camera.hpp  Chunk.hpp  Client.cpp  Client.hpp  Clipping.cpp  DebugEvent.hpp  DeferredLighting.cpp  DeferredLighting.hpp  Delegate.hpp  DelegateResize.hpp  DynamicArray.hpp  EditorView.cpp  EditorView.hpp  Entry.cpp  Event.cpp  Event.hpp  FastMap.hpp  File.cpp  File.hpp  FileEvent.hpp  FileSystem.cpp  FileSystem.hpp  GBuffer.cpp  GBuffer.hpp  GameMap.hpp  GameView.cpp  GameView.hpp  GraphicsEvent.hpp  IO.cpp  IO.hpp  IOEvent.hpp  Isosurface.cpp  Isosurface.hpp  (+186 more)
src/Common/: Buffer.hpp  Delegate.hpp  DynamicArray.hpp  FastMap.hpp  Log.cpp  Log.hpp  Math.hpp  Memory.cpp  Memory.hpp  Settings.cpp  Settings.hpp  Stack.hpp  Utils.cpp  Utils.hpp
src/Core/: ArenaAllocator.hpp  EditorEvent.hpp  Event.cpp  Event.hpp  File.cpp  FileSystem.hpp  IO.cpp  IO.hpp  LinearAllocator.cpp  ThreadPool.hpp  Window.cpp  Window.hpp  Worker.cpp  Worker.hpp
src/Game/: Entity.hpp  EntityCamera.cpp  EntityCamera.hpp  EntityController.cpp  EntityController.hpp  Game.cpp  Game.hpp  GameInput.hpp  Geometry.cpp  Geometry.hpp  InputTranslator.cpp  InputTranslator.hpp  Physics.cpp  Physics.hpp  Simulation.cpp  Simulation.hpp
src/Graphics/: AnimatedRig.cpp  AnimatedRig.hpp  AnimationCycle.hpp  AnimationManager.cpp  AnimationManager.hpp  AssimpImporter.cpp  AssimpImporter.hpp  BloomRenderer.cpp  BloomRenderer.hpp  Camera.cpp  Chunk.cpp  Chunk.hpp  Clipping.hpp  CloudRenderer.hpp  DeferredLighting.cpp  DeferredLighting.hpp  GBuffer.cpp  GBuffer.hpp  Isosurface.cpp  Isosurface.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  ParticleDemo.cpp  ParticleDemo.hpp  ParticleRenderer.hpp  Pipelin.hpp  Pixelater.cpp  PlanetRenderer.cpp  PlanetRenderer.hpp  QuadTree.cpp  QuadTree.hpp  RenderMethod.cpp  RenderMethod.hpp  RenderStage.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererCache.cpp  RendererCache.hpp  (+50 more)
src/Imgui/: imgui_console.cpp
src/Runtime/: Application.cpp  Application.hpp  Client.cpp  Client.hpp  Entry.cpp
src/View/: DemoView.cpp  DemoView.hpp  EditorView.cpp  EditorView.hpp  GameView.cpp  GameView.hpp  MapView.cpp  View.hpp  ViewStack.cpp
